# docs/swagger.yaml
@@ -12,7 +12,7 @@ host: lcygetname.cn
 info:
   contact:
     email: support@swagger.io
-    name: Eric
+    name: Eric Jiang
     url: http://www.swagger.io/support
   description: 使用go v1.22.9 + gin v1.10
   license:
@@ -110,6 +110,73 @@ paths:
       summary: 创建用户
       tags:
       - 注册登陆
+  /v1/relation/add:
+    post:
+      description: 通过昵称加好友
+      parameters:
+      - description: 用户身份
+        in: header
+        name: Uid
+        required: true
+        type: integer
+      - description: 增加的用户id
+        in: formData
+        name: userId
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 请求成功
+          schema:
+            $ref: '#/definitions/models.Resp'
+        "400":
+          description: 请求错误
+          schema:
+            $ref: '#/definitions/models.Resp'
+        "500":
+          description: 内部错误
+          schema:
+            $ref: '#/definitions/models.Resp'
+      security:
+      - ApiKeyAuth: []
+      summary: 通过昵称加好友
+      tags:
+      - 好友关系
+  /v1/relation/list:
+    post:
+      description: 批量获取好友列表信息
+      parameters:
+      - description: 用户身份
+        in: header
+        name: Uid
+        required: true
+        type: integer
+      - description: 好友ID
+        in: formData
+        name: userId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 请求成功
+          schema:
+            $ref: '#/definitions/models.Resp'
+        "400":
+          description: 请求错误
+          schema:
+            $ref: '#/definitions/models.Resp'
+        "500":
+          description: 内部错误
+          schema:
+            $ref: '#/definitions/models.Resp'
+      security:
+      - ApiKeyAuth: []
+      summary: 获取好友列表
+      tags:
+      - 好友关系
   /v1/user/condition:
     get:
       description: 批量获取所有用户信息
